--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,10 @@
         "php": "^8.2",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
-        "livewire/volt": "^1.7.0"
+        "livewire/volt": "^1.7.0",
+        "livewire/livewire": "^3.6",
+        "romanzipp/laravel-seo": "^2.6",
+        "filament/filament": "^3.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
