--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     },
     "optionalDependencies": {
         "@rollup/rollup-linux-x64-gnu": "4.9.5"
+    },
+    "devDependencies": {
+        "@rollup/plugin-inject": "^5.0.5"
     }
 }
