--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
         "gsap": "3.13.0",
         "jquery": "3.7.1",
         "laravel-vite-plugin": "^2.0",
+        "magnific-popup": "^1.2.0",
         "swiper": "11.0.5",
-        "vite": "7.1.11"
+        "vite": "7.1.11",
+        "waypoints": "^4.0.1",
+        "wow.js": "^1.2.2"
     },
     "optionalDependencies": {
         "@rollup/rollup-linux-x64-gnu": "4.9.5"
