--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "livewire/volt": "^1.7.0",
         "livewire/livewire": "^3.6",
         "romanzipp/laravel-seo": "^2.6",
-        "filament/filament": "^3.2"
+        "filament/filament": "^4.0",
+        "filament/spatie-laravel-settings-plugin": "^4.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
