--- a/composer.json
+++ b/composer.json
@@ -3,20 +3,18 @@
     "name": "laravel/blank-livewire-starter-kit",
     "type": "project",
     "description": "The official Laravel starter kit for Livewire.",
-    "keywords": [
-        "laravel",
-        "framework"
-    ],
+    "keywords": ["laravel", "framework"],
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "filament/filament": "^4.0",
+        "filament/spatie-laravel-media-library-plugin": "^4.0",
+        "filament/spatie-laravel-settings-plugin": "^4.0",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
-        "livewire/volt": "^1.7.0",
         "livewire/livewire": "^3.6",
-        "romanzipp/laravel-seo": "^2.6",
-        "filament/filament": "^4.0",
-        "filament/spatie-laravel-settings-plugin": "^4.0"
+        "livewire/volt": "^1.7.0",
+        "romanzipp/laravel-seo": "^2.6"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
@@ -33,7 +31,10 @@
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
-        }
+        },
+        "files": [
+            "app/Helpers/settings_helper.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
@@ -64,7 +65,8 @@
         ],
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
-            "@php artisan package:discover --ansi"
+            "@php artisan package:discover --ansi",
+            "@php artisan filament:upgrade"
         ],
         "post-update-cmd": [
             "@php artisan vendor:publish --tag=laravel-assets --ansi --force"
