--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "jquery": "3.7.1",
         "laravel-vite-plugin": "^2.0",
         "magnific-popup": "^1.2.0",
+        "pdfjs-dist": "^2.16.105",
         "swiper": "11.0.5",
         "vite": "7.1.11",
         "waypoints": "^4.0.1",
